Blood Sugar page with date and time picker

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         <activity android:name=".Login"/>
         <activity android:name=".LogBook"/>
         <activity android:name=".SignUp1"/>
+        <activity android:name=".SignUp2"/>
+        <activity android:name=".BloodSugar"/>
 
 
     </application>
