--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,23 +7,32 @@
         android:icon="@mipmap/ic_launcher"
         android:label="DiaLog"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:screenOrientation="portrait"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".Questoinnaire"
+            android:exported="false" />
+        <activity
+            android:name=".ProfileDetails"
+            android:exported="false" />
+        <activity
+            android:name=".Settings"
+            android:exported="false" />
+        <activity
+            android:name=".LogMenu"
+            android:exported="false" />
         <activity android:name=".Welcome">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".Login"/>
-        <activity android:name=".LogBook"/>
-        <activity android:name=".SignUp1"/>
-
-
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Login" />
+        <activity android:name=".LogBook" />
+        <activity android:name=".SignUp1" />
     </application>
 
 </manifest>
