--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,11 @@ android {
     compileSdkVersion 31
     buildToolsVersion "30.0.2"
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
         applicationId "com.example.diappetes"
         minSdkVersion 21
