--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".Questoinnaire"
+            android:name=".Questionnaire"
             android:exported="false" />
         <activity
             android:name=".ProfileDetails"
