--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".SignUp1"/>
         <activity android:name=".SignUp2"/>
         <activity android:name=".BloodSugar"/>
+        <activity android:name=".Graph"/>
 
 
     </application>
