Graph page correctly displays blood sugar levels over time, pressing a point in the graph displays it on screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity android:name=".SignUp1"/>
         <activity android:name=".SignUp2"/>
         <activity android:name=".BloodSugar"/>
-        <activity android:name=".Graph"/>
+        <activity android:name=".Graph"
+            android:screenOrientation="landscape"/>
 
 
     </application>
