Changed some file names in the setting up of viewing history. Only changed names of files I have created now, so should not affect anyone else

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".ExerciseLog" />
         <activity android:name=".ExtraNotes" />
         <activity android:name=".FoodLog" />
+        <activity android:name=".PastBSEntries" />
         <activity android:name=".MedLog" />
         <activity android:name=".Graph"
             android:screenOrientation="landscape"/>
