--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,8 +37,9 @@
         <activity android:name=".ExerciseLog" />
         <activity android:name=".ExtraNotes" />
         <activity android:name=".FoodLog" />
-        <activity android:name=".PastBSEntries" />
+        <activity android:name=".BSHistory" />
         <activity android:name=".MedLog" />
+        <activity android:name=".FoodHistory" />
         <activity android:name=".Graph"
             android:screenOrientation="landscape"/>
 
