History available for Medication, Exercise and Notes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
         <activity android:name=".MedLog" />
         <activity android:name=".FoodHistory" />
         <activity android:name=".MedHistory" />
+        <activity android:name=".ExerciseLogHistory" />
+        <activity android:name=".ExtraNotesHistory" />
         <activity android:name=".Graph"
             android:screenOrientation="landscape"/>
 
