--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".DoctorDetails"
+            android:name=".Activities.DoctorDetails"
             android:exported="false" />
-        <activity android:name=".History" />
-        <activity android:name=".Questionnaire" />
-        <activity android:name=".ProfileDetails" />
-        <activity android:name=".Settings" />
-        <activity android:name=".LogMenu" />
-        <activity android:name=".Welcome">
+        <activity android:name=".Activities.History" />
+        <activity android:name=".Activities.Questionnaire" />
+        <activity android:name=".Activities.ProfileDetails" />
+        <activity android:name=".Activities.Settings" />
+        <activity android:name=".Activities.LogMenu" />
+        <activity android:name=".Activities.Welcome">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,22 +28,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".Login" />
-        <activity android:name=".SignUp1" />
-        <activity android:name=".SignUp2" />
-        <activity android:name=".BloodSugar" />
-        <activity android:name=".ExerciseLog" />
-        <activity android:name=".ExtraNotes" />
-        <activity android:name=".FoodLog" />
-        <activity android:name=".BSHistory" />
-        <activity android:name=".MedLog" />
-        <activity android:name=".FoodHistory" />
-        <activity android:name=".MedHistory" />
-        <activity android:name=".ExerciseLogHistory" />
-        <activity android:name=".ExtraNotesHistory" />
-        <activity android:name=".QuestionnaireHistory" />
-        <activity android:name=".Graph"
+        <activity android:name=".Activities.MainActivity" />
+        <activity android:name=".Activities.Login" />
+        <activity android:name=".Activities.SignUp1" />
+        <activity android:name=".Activities.SignUp2" />
+        <activity android:name=".Activities.BloodSugar" />
+        <activity android:name=".Activities.ExerciseLog" />
+        <activity android:name=".Activities.ExtraNotes" />
+        <activity android:name=".Activities.FoodLog" />
+        <activity android:name=".Activities.HistoryViewClasses.BSHistory" />
+        <activity android:name=".Activities.MedLog" />
+        <activity android:name=".Activities.HistoryViewClasses.FoodHistory" />
+        <activity android:name=".Activities.HistoryViewClasses.MedHistory" />
+        <activity android:name=".Activities.HistoryViewClasses.ExerciseLogHistory" />
+        <activity android:name=".Activities.HistoryViewClasses.ExtraNotesHistory" />
+        <activity android:name=".Activities.HistoryViewClasses.QuestionnaireHistory" />
+        <activity android:name=".Activities.Graph"
             android:screenOrientation="landscape"/>
 
 
